[package]
name = "pong"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/foxication/pong"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_editor_pls = "0.8.1"
bevy_vello = { version = "0.4.2", features = ["svg"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
